--- a/Waiter's_Tips_Prediction.ipynb
+++ b/Waiter's_Tips_Prediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP09XlGsXL/Ppvfi/Yytro0",
+      "authorship_tag": "ABX9TyMo7dXbw4sL2ILG0f6+/J9i",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,8 +27,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Waiter's Tips Prediction\n",
+        "\n",
+        "[Link para o repositório no Github.](https://github.com/filipecarbonera/Waiters-Tips-Prediction)"
+      ],
+      "metadata": {
+        "id": "4LjhjvVQ2tYI"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "taiymANnp1ea"
       },
@@ -62,7 +73,7 @@
         "id": "d0Sb4X-PqLSF",
         "outputId": "9dbff3e1-dc59-48d4-e8ea-bbf8d38fa76f"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -287,7 +298,7 @@
         "id": "3Dw-GtCSqU9j",
         "outputId": "a1d057be-5d4f-4f4c-d4b0-af55f6349835"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -331,7 +342,7 @@
         "id": "5SGX1ps-qdrC",
         "outputId": "142158b3-533f-4435-8e0c-39b33373da21"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -526,7 +537,7 @@
         "id": "Y-oeztqn3XT0",
         "outputId": "9a866a39-da8a-4480-bec6-8250cc8bb767"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -594,7 +605,7 @@
         "id": "EvmxmqCn3XWc",
         "outputId": "40c45a41-e437-4018-c1ec-382565832567"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -662,7 +673,7 @@
         "id": "CeO3Y3rR6KwC",
         "outputId": "6a1ece1a-b2e7-4406-b33e-f845e16ab473"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -730,7 +741,7 @@
         "id": "1x4M9TzN6Sb5",
         "outputId": "304ebec6-e731-4b6c-d715-f25941e5c3a5"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -798,7 +809,7 @@
         "id": "avDwVG-71f0u",
         "outputId": "e5d66c7c-2d33-42b1-daad-9aa5e901f792"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -864,7 +875,7 @@
         "id": "pNqZe2qT2eVY",
         "outputId": "4fb65c31-d196-47c1-d3de-33ce4b831e14"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -930,7 +941,7 @@
         "id": "z75uHxaD3XHJ",
         "outputId": "48e60f72-a511-4bb7-ed15-66221d6e39a6"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1007,7 +1018,7 @@
         "id": "D0xJzrkSrB5L",
         "outputId": "7ad51f2a-3410-4ddf-82f9-19ef1f98e03a"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1234,7 +1245,7 @@
         "id": "OjqV_4ajuaLh",
         "outputId": "c19dad97-021c-4b05-fd31-bc0f02853e25"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1270,7 +1281,7 @@
       "metadata": {
         "id": "27FL2o9zr0nI"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1287,7 +1298,7 @@
         "id": "xiuhdk0Ctiuv",
         "outputId": "bb5ef2d3-5395-468f-c4a0-bbc99ff9c485"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1476,7 +1487,7 @@
         "id": "zWgoF2Jttjs0",
         "outputId": "614b09b5-3d43-49f3-e1b6-7f5ba60a5653"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1637,7 +1648,7 @@
         "id": "WLH2kFextlHT",
         "outputId": "439c50f6-98d9-4382-d6c0-f69393fdcb99"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1664,7 +1675,7 @@
         "id": "KGgZNtN3uKyB",
         "outputId": "5e0bd4cc-dc55-4e59-d0b9-e502c9cceb4a"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1692,7 +1703,7 @@
         "id": "N4LwGDO0vbSk",
         "outputId": "c72a0df4-a42c-4b5d-85fc-78ec3837d2f5"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1744,7 +1755,7 @@
         "id": "00yQ5i91vXcB",
         "outputId": "d604d995-ed67-406e-a2ce-01b8d4173f81"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1776,7 +1787,7 @@
         "id": "sJeeDszqv-9z",
         "outputId": "2b30d41c-fb19-42bd-a371-f3a0b269994e"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
